--- a/ga4_d3.html
+++ b/ga4_d3.html
@@ -8,7 +8,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-BD78GL7S8Y');
+      gtag('config', 'G-X4RKZJNSXK');
     </script>
 
     <meta charset="UTF-8">
