--- a/ga4_d3.html
+++ b/ga4_d3.html
@@ -3,7 +3,7 @@
 <head>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BD78GL7S8Y"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X4RKZJNSXK"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
